# ted-data-analyser

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
client/: Dockerfile  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  helper.ts  types.ts
client/src/components/: Navbar.tsx  NoticeCard.tsx  NoticesTable.tsx
client/src/pages/: Home.tsx  HomePage.tsx  NoticesPage.tsx  StatsPage.tsx
server/: Dockerfile  pyproject.toml
server/app/: main.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: admin.py  live_notices.py  notices.py  stats.py
server/app/core/: config.py  database.py
server/app/models/: schemas.py
server/app/scripts/: ingest_ted.py
